photo.html + manifest.json

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ ul {
 
 #section-b ul {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 a {
