--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ ul {
 
 #section-b ul {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 a {
@@ -107,4 +107,12 @@ a {
 
 .edt-3 {
     background-image: url('../img/edt3.jpg');
+}
+
+@media(max-width:800px) {
+    #section-b ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: left;
+    }
 }
